--- a/css/style.css
+++ b/css/style.css
@@ -3845,3 +3845,11 @@ pre {
 	margin: -22px auto 0 auto;
 }
 
+@media (min-width:700px){
+    #main-nav .navbar-right li a{
+    color: #000
+    }
+    #main-nav .navbar-right li a:hover{
+        color:#86c724;
+    }
+}
